--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,12 +39,58 @@ a {
   text-decoration: none;
 }
 
-h2{
-  @apply text-2xl; 
+h2 {
+  @apply text-2xl;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+/* styles/globals.css */
+input[type="range"] {
+  -webkit-appearance: none; /* Override default CSS styles */
+  appearance: none;
+  width: 100%;
+  height: 4px; /* Adjusted height for better alignment */
+  background: rgba(11, 133, 30, 0.38); /* MoodWalk green with 38% opacity */
+  border-radius: 5px;
+  outline: none; /* Remove outline */
+  margin: 0; /* Remove default margin */
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default CSS styles */
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #0b851e; /* MoodWalk green */
+  cursor: pointer;
+  margin-top: -6px; /* Align thumb with track */
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #0b851e; /* MoodWalk green */
+  cursor: pointer;
+}
+
+input[type="range"]::-ms-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #0b851e; /* MoodWalk green */
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px; /* Adjusted height for better alignment */
+  cursor: pointer;
+  background: rgba(11, 133, 30, 0.38); /* MoodWalk green with 38% opacity */
+  border-radius: 5px;
 }
